--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ nav a {
     border: none;
     cursor: pointer;
 }
-
+.gallery{
+    background: linear-gradient(to right, #3C3D37,#557C56);
+}
 .portfolio h2 {
     margin-top: 50px;
     font-size: 36px;
